<resources>
    <string name="app_name">RasakuApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="price_rasaku">Rp.%d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : Rp.%d</string>
    <string name="total_order">Total pesanan : Rp.%d</string>
    <string name="back">Back</string>
    <string name="dicoding_rasaku">Dicoding Reward</string>
    <string name="share_message">Halo min, saya ingin memesan %1$d jenis oleh-oleh khas Kuningan dengan total harga Rp.%2$d.</string>
    <string name="search_rasaku">Cari Oleh-Oleh</string>
    <string name="error_message">Oleh-oleh belum ditambahkan</string>
    <string name="empty_favorite">Tidak ada list favorite.</string>
    <string name="empty_cart_message">Keranjang masih kosong.</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="delete_favorite">Remove from Favorite</string>
</resources>