...

        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("ProdukList")
        ) {
            items(orderRasaku) { data ->
                RasakuItem(
                    image = data.rasaku.image,
                    title = data.rasaku.title,
                    priceRasaku = data.rasaku.price,
...
