...

@Composable
fun DetailContent(
    @DrawableRes image: Int,
    title: String,
    basePrice: Int,
    count: Int,
    description: String,
    onBackClick: () -> Unit,
    onAddToCart: (count: Int) -> Unit,
    onFavoriteButtonClicked: (id: Long, state: Boolean) -> Unit,
    id: Long,
    isFavorite: Boolean, // Ambil dari ViewModel
...
                    modifier = Modifier
                        .padding(16.dp)
                        .align(Alignment.TopEnd)
                        .clip(CircleShape)
                        .size(40.dp)
                        .background(Color.White)
                        .testTag("favorite_detail_button")
                ) {
                    Icon(
                        imageVector = if (favoriteState) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                        contentDescription = if (favoriteState) stringResource(R.string.delete_favorite) else stringResource(R.string.add_favorite),
                        tint = if (favoriteState) Color.Red else Color.Black // Update warna berdasarkan status lokal favorit
                    )
...
